--- a/app/src/output.css
+++ b/app/src/output.css
@@ -558,12 +558,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .block {
@@ -572,6 +572,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-20 {
@@ -690,6 +694,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.5rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-l-xl {
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -718,6 +726,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-sub2 {
   --tw-bg-opacity: 1;
   background-color: rgb(69 85 103 / var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
 .bg-sub3 {
@@ -907,6 +920,53 @@ input[type=range]::-webkit-slider-runnable-track  {
 
 #main-home{
   display: block;
+}
+
+.close-modal {
+  position: absolute;
+  /* modalを閉じるボタン */
+  top: 4px;
+  right: 22px;
+  font-size: 40px;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  display: none;
+  /* hiddenクラスが付与されている場合は表示させないようにする */
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  background-color: #717B88;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+  /* modalに影を作る */
+  z-index: 10;
+  /* z-indexでmodalを一番上に位置させる */
+}
+
+.overlay {
+  position: absolute;
+  /* overlayの絶対位置を左上を起点にし幅と高さを100%にする */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  /* 一番下のbody領域をぼやかす */
+  z-index: 5;
+  /* z-indexの数字を0と10の間の数字にし、bodyとmodalの真ん中に位置させる */
 }
 
 .hover\:bg-sub3:hover {
