--- a/app/src/input.css
+++ b/app/src/input.css
@@ -109,3 +109,42 @@ input[type=range]::-webkit-slider-runnable-track  {
     backdrop-filter: blur(3px); /* 一番下のbody領域をぼやかす */
     z-index: 5; /* z-indexの数字を0と10の間の数字にし、bodyとmodalの真ん中に位置させる */
 }
+
+.hover {
+    position: relative;
+    width: 208px;
+    height:208px;
+  }
+  .hover .hover-img {
+    margin: 0;
+    padding: 0;
+  }
+  .hover .hover-text {
+    position:    absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: #fff;
+    background-color:    rgba(0,0,0,0.65);
+    /*透明にして表示させない*/
+    opacity: 0;
+    /*ホバーの動き方*/
+    transition: .3s ease-in-out;
+  }
+  .hover .hover-text .button {
+    
+  }
+  .hover .hover-text .text1 {
+    font-size: 22px;
+    padding: 10px 20px;
+  }
+  .hover .hover-text .text2 {
+    font-size: 16px;
+    padding: 0 20px;
+  }
+
+  .hover:hover .hover-text {
+    /*不透明にして表示*/
+    opacity: 1;
+  }
