--- a/app/src/output.css
+++ b/app/src/output.css
@@ -488,6 +488,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: 0px;
 }
 
+.float-left {
+  float: left;
+}
+
 .m-4 {
   margin: 1rem;
 }
@@ -530,18 +534,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 5rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .ml-\[480px\] {
   margin-left: 480px;
 }
@@ -560,6 +552,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mb-16 {
@@ -598,16 +602,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2rem;
 }
 
-.h-52 {
-  height: 13rem;
-}
-
 .h-\[270px\] {
   height: 270px;
 }
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-16 {
@@ -624,14 +632,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-1\/6 {
   width: 16.666667%;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-52 {
-  width: 13rem;
 }
 
 .w-40 {
@@ -654,6 +654,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 480px;
 }
 
+.w-60 {
+  width: 15rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -662,8 +670,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .flex-none {
   flex: none;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .flex-col {
@@ -725,6 +747,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-left-radius: 0.75rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .bg-base {
   --tw-bg-opacity: 1;
   background-color: rgb(58 71 80 / var(--tw-bg-opacity));
@@ -735,11 +766,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(196 196 196 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-sub1 {
   --tw-bg-opacity: 1;
   background-color: rgb(48 56 65 / var(--tw-bg-opacity));
@@ -748,6 +774,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-sub2 {
   --tw-bg-opacity: 1;
   background-color: rgb(69 85 103 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-green-400 {
@@ -763,6 +794,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-sub3 {
   --tw-bg-opacity: 1;
   background-color: rgb(113 123 136 / var(--tw-bg-opacity));
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .p-4 {
@@ -798,14 +841,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: right;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-xl {
@@ -823,6 +865,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
@@ -832,12 +879,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 200;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-thin {
   font-weight: 100;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .font-semibold {
@@ -857,6 +904,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sub3 {
   --tw-text-opacity: 1;
   color: rgb(113 123 136 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .shadow {
@@ -1055,6 +1107,16 @@ input[type=range]::-webkit-slider-runnable-track  {
 .hover:hover .hover-text {
   /*不透明にして表示*/
   opacity: 1;
+}
+
+.checked\:border-blue-600:checked {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
+.checked\:bg-blue-600:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-sub3:hover {
