--- a/app/src/output.css
+++ b/app/src/output.css
@@ -582,6 +582,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
 }
 
+.contents {
+  display: contents;
+}
+
 .hidden {
   display: none;
 }
