--- a/app/src/output.css
+++ b/app/src/output.css
@@ -472,6 +472,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.inset-1\/2 {
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -486,6 +497,38 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bottom-0 {
   bottom: 0px;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.bottom-8 {
+  bottom: 2rem;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .float-left {
@@ -562,6 +605,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1.25rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -590,6 +641,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -614,8 +669,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }
 
-.h-52 {
-  height: 13rem;
+.h-80 {
+  height: 20rem;
+}
+
+.h-\[8\.4rem\] {
+  height: 8.4rem;
 }
 
 .h-4 {
@@ -658,20 +717,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 480px;
 }
 
-.w-60 {
-  width: 15rem;
+.w-3\/4 {
+  width: 75%;
 }
 
-.w-52 {
-  width: 13rem;
+.w-48 {
+  width: 12rem;
 }
 
 .w-10 {
   width: 2.5rem;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .w-4 {
@@ -680,6 +735,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-none {
   flex: none;
+}
+
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-50\%\] {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -785,16 +850,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-sub3 {
   --tw-bg-opacity: 1;
   background-color: rgb(113 123 136 / var(--tw-bg-opacity));
@@ -812,6 +867,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-repeat: no-repeat;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -824,13 +884,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1.25rem;
 }
 
-.p-0 {
-  padding: 0px;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-left {
@@ -874,6 +948,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.5rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
@@ -905,6 +989,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(69 85 103 / var(--tw-text-opacity));
 }
 
+.text-sub1 {
+  --tw-text-opacity: 1;
+  color: rgb(48 56 65 / var(--tw-text-opacity));
+}
+
 .text-sub3 {
   --tw-text-opacity: 1;
   color: rgb(113 123 136 / var(--tw-text-opacity));
@@ -913,12 +1002,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline {
@@ -943,10 +1026,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 body {
@@ -1023,17 +1102,16 @@ input[type=range]::-webkit-slider-runnable-track  {
   display: block;
 }
 
-.close-modal {
-  position: absolute;
-  /* modalを閉じるボタン */
-  top: 4px;
-  right: 22px;
-  font-size: 40px;
-  color: #333;
-  cursor: pointer;
-  border: none;
-  background: none;
-}
+/* .close-modal {
+    position: absolute;         
+    top: 4px;
+    right: 22px;
+    font-size: 40px;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+} */
 
 .hidden {
   display: none;
@@ -1045,14 +1123,6 @@ input[type=range]::-webkit-slider-runnable-track  {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 70%;
-  background-color: #717B88;
-  padding: 6rem;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
-  /* modalに影を作る */
-  z-index: 10;
-  /* z-indexでmodalを一番上に位置させる */
 }
 
 .overlay {
@@ -1072,8 +1142,6 @@ input[type=range]::-webkit-slider-runnable-track  {
 
 .hover {
   position: relative;
-  width: 208px;
-  height:208px;
 }
 
 .hover .hover-img {
@@ -1128,11 +1196,6 @@ input[type=range]::-webkit-slider-runnable-track  {
   background-color: rgb(113 123 136 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-sub3\/50:hover {
   background-color: rgb(113 123 136 / 0.5);
 }
@@ -1140,10 +1203,4 @@ input[type=range]::-webkit-slider-runnable-track  {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.active\:shadow-lg:active {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
